Shazir/defi-5/web-vroumvroum-svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-vroumvroum-svc-front
spec:
  type: NodePort
  selector:
    app: web-vroumvroum-front
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
