Shazir/defi-5/web-vroumvroum-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-vroumvroum-ingress
spec:
  rules:
  - host: django.antivol.csc8567.luxbulb.org
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: web-vroumvroum-svc-api
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: web-vroumvroum-svc-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-vroumvroum-svc-front
            port:
              number: 80
